--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
                 <a href="https://www.instagram.com/p/C10uUYpx9bK/?img_index=1" target="_blank" id="gem8"><img src="images/gem8.jpg" alt="un collier en corail"></a><br>
                 <h4>un collier en corail</h4>
             </div>   
-
+            
+            <div class="image-box" data-name="toutes dessiner bague en corail boucles d'oreilles en corail">
+                <a href="https://www.instagram.com/p/C10uUYpx9bK/?img_index=2" target="_blank" id="gem9"><img src="images/gem9.jpg" alt="la bague en corail et les boucles d'oreilles en corail"></a><br>
+                <h4>la bague en corail et les boucles d'oreilles en corail</h4>
+            </div>   
 
         
 
