--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
                 <h4>la bague en corail et les boucles d'oreilles en corail</h4>
             </div>   
 
+            <div class="image-box" data-name="toutes dessiner boucles d'oreilles Thomas Jirgens African Welo Opal Paraibal Tourmaline bleu 18K or jaune carats" >
+                <a href="https://www.instagram.com/p/C4IOxFAps6T/" target="_blank" id="gem12"><img src="images/gem12.jpg" alt="la bague en malachites"></a><br>
+                <h4>boucles d'oreilles de opal et tourmalines Paraíba</h4>
+            </div>     
+
+
+       
         
 
 
