--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                 <h4>boucles d'oreilles de opal et tourmalines Paraíba</h4>
             </div>     
 
+            <div class="image-box" data-name="toutes dessiner boucles d'oreilles perles d'eau douce freshwater laiton argent" >
+                <a href="https://www.instagram.com/p/C4KkBeNSe_3/" target="_blank" id="gem13"><img src="images/gem13.jpg" alt="boucles d'oreilles perles"></a><br>
+                <h4>boucles d'oreilles perles</h4>
+            </div>     
 
        
         
