--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
        
         
 
+            <div class="image-box" data-name="toutes dessiner minéral chrysobérylal alexandrite vert jaune transparent" >
+                <a href="https://www.instagram.com/p/C4pNk-7SVph/" target="_blank" id="gem14"><img src="images/gem14 chrysoberyl.png" alt="minéral de chrysobéryl"></a><br>
+                <h4>minéral de chrysobéryl</h4>
+            </div>      
 
 
 
