--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
                 <h4>boucles d'oreilles perles</h4>
             </div>     
 
-       
-        
-
             <div class="image-box" data-name="toutes dessiner minéral chrysobérylal alexandrite vert jaune transparent" >
                 <a href="https://www.instagram.com/p/C4pNk-7SVph/" target="_blank" id="gem14"><img src="images/gem14 chrysoberyl.png" alt="minéral de chrysobéryl"></a><br>
                 <h4>minéral de chrysobéryl</h4>
             </div>      
 
-
+            <div class="image-box" data-name="toutes dessiner chrysobérylal alexandrite bague bleu violet cerf-volant baguette facet taillée facet" >
+                <a href="https://www.instagram.com/p/C4ryh6-yipx/" target="_blank" id="gem15"><img src="images/gem15.png" alt="bague en alexandrite"></a><br>
+                <h4>bague en alexandrite </h4>
+            </div>    
 
 
         </div>
