--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@
             </div>      
 
             <div class="image-box" data-name="toutes dessiner chrysobérylal alexandrite bague bleu violet cerf-volant baguette facet taillée facet" >
-                <a href="https://www.instagram.com/p/C4ryh6-yipx/" target="_blank" id="gem15"><img src="images/gem15.png" alt="bague en alexandrite"></a><br>
+                <a href="https://www.instagram.com/p/C4ryh6-yipx/" target="_blank" id="gem15"><img src="images/gem15 alexandrite.jpg" alt="bague en alexandrite"></a><br>
                 <h4>bague en alexandrite </h4>
             </div>    
+
+
 
 
         </div>
