--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
                 <h4>bague en alexandrite </h4>
             </div>    
 
+            <div class="image-box" data-name="toutes dessiner rubellite gemme rouge cabochon taillée ronde " >
+                <a href="https://www.instagram.com/p/C4xLoAIyUAO/" target="_blank" id="gem16"><img src="images/gem16 rubellite.jpg" alt="ne rubellite en taille cabochon"></a><br>
+                <h4>une rubellite en taille cabochon</h4>
+            </div>    
+
+            
+
 
 
 
