added gem 17 un collier de chaine de princess en tourmalien rouge

--- a/index.html
+++ b/index.html
@@ -106,9 +106,15 @@
             </div>    
 
             <div class="image-box" data-name="toutes dessiner rubellite gemme rouge cabochon taillée ronde " >
-                <a href="https://www.instagram.com/p/C4xLoAIyUAO/" target="_blank" id="gem16"><img src="images/gem16 rubellite.jpg" alt="ne rubellite en taille cabochon"></a><br>
+                <a href="https://www.instagram.com/p/C4xLoAIyUAO/" target="_blank" id="gem16"><img src="images/gem16 rubellite.jpg" alt="une rubellite en taille cabochon"></a><br>
                 <h4>une rubellite en taille cabochon</h4>
             </div>    
+
+            <div class="image-box" data-name="toutes dessiner collier chaîne chain tourmaline gemme rouge cabochon taillée ronde pomellato" >
+                <a href="https://www.instagram.com/p/C4zmLYjSYSE/" target="_blank" id="gem17"><img src="images/gem17 rubellite pomellato.jpg" alt="ne rubellite en taille cabochon"></a><br>                
+                <h4>un collier de chaîne de princesse en tourmaline rouge</h4>
+            </div>    
+            
 
             
 
