--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>    
 
             <div class="image-box" data-name="toutes dessiner collier tanzanite gemme bleu cabochon" >
-                <a href="https://www.instagram.com/p/C5U-skmy2bj/" target="_blank" id="gem19"><img src="images/gem19 " alt="un collier en tanzanite"></a><br>                
+                <a href="https://www.instagram.com/p/C5U-skmy2bj/" target="_blank" id="gem19"><img src="images/gem19 tanzanite .jpg" alt="un collier en tanzanite"></a><br>                
                 <h4>un collier en tanzanite</h4>
     
             </div>    
