added gem21 tanzanite

--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
                 <a href="https://www.instagram.com/p/C5Yc58QS75d/" target="_blank" id="gem20"><img src="images/gem20 tanzanite .jpg" alt="tanzanite"></a><br>                
                 <h4>tanzanite</h4>
             </div>    
+
+            <div class="image-box" data-name="toutes dessiner tanzanite minéral gemme bleu tailler" >
+                <a href="https://www.instagram.com/p/C5hjV86y1Hk/" target="_blank" id="gem21"><img src="images/gem21 tanzanite.jpg" alt="tanzanite"></a><br>                
+                <h4>tanzanite</h4>
+            </div>    
           
             
 
